river animation added

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
          xmlns="http://www.w3.org/2000/svg"
          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
          xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-         viewBox="0 0 1801.7919 4903.6614"
+         viewBox="0 0 1801.7919 4995.4812"
          version="1.1"
          id="svg3581"
          sodipodi:docname="new.svg"
          inkscape:version="0.92.4 (unknown)"
          class="rivers"
          width="1801.7919"
-         height="4903.6616">
+         height="4995.4814">
         <style
            id="style946">
                       @import url('https://fonts.googleapis.com/css?family=Roboto&amp;display=swap');
@@ -135,8 +135,8 @@
            fit-margin-right="0"
            fit-margin-bottom="0"
            inkscape:zoom="0.10365949"
-           inkscape:cx="1046.6004"
-           inkscape:cy="3392.6405"
+           inkscape:cx="-1560.5448"
+           inkscape:cy="2404.2537"
            inkscape:window-x="0"
            inkscape:window-y="27"
            inkscape:window-maximized="1"
@@ -169,7 +169,7 @@
         <g
            style="isolation:isolate"
            id="g3579"
-           transform="translate(119.83086,-391.82001)">
+           transform="translate(119.83086,-300)">
           <g
              id="edce9a80-aa17-4c46-89f4-b92668b3371d"
              data-name="Layer 1">
@@ -183,13 +183,13 @@
                y2="3198.6299"
                stroke-miterlimit="10"
                id="line176"
-               class="ukraine not-affected hover-tooltip"
+               class="ukraine not-affected hover-tooltip second"
                style="fill:none;stroke:#00adef;stroke-width:270.1499939;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 758,1287.62 v 58.11 c 0.0659,22.064 17.93596,39.9341 40,40 l 45.6755,-2.4117 c 22.06404,0.066 39.9341,17.936 40,40 v 2087.346"
                stroke-miterlimit="10"
                id="path178"
-               class="serbia not-affected hover-tooltip"
+               class="serbia not-affected hover-tooltip second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:38.54999924;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -197,7 +197,7 @@
                d="m 864.29,1287.62 v 19.92 c 0,11 8.66402,19.91 8.66402,19.91 v 0 c 22.06404,0.066 39.9341,17.936 40,40 l -0.71804,2143.7297"
                stroke-miterlimit="10"
                id="path180"
-               class="moldova not-affected hover-tooltip"
+               class="moldova not-affected hover-tooltip second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:21.48749924;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cssccc" />
@@ -205,7 +205,7 @@
                d="m 697,1287.62 v 121.67 c 0.0659,22.064 17.93596,39.9341 40,40 h 86.09438 c 22.06404,0.066 39.9341,17.936 40,40 v 2023.2079"
                stroke-miterlimit="10"
                id="path182"
-               class="kosovo not-affected"
+               class="kosovo not-affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:3.0374999;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -213,7 +213,7 @@
                d="m 643,1287.62 v 177.51 c 0.0659,22.064 17.93596,39.9341 40,40 h 133.43083 c 22.06404,0.066 39.9341,19.6414 40,41.7054 v 1965.6625"
                stroke-miterlimit="10"
                id="path184"
-               class="macedonia not-affected hover-tooltip"
+               class="macedonia not-affected hover-tooltip second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:12.22500038;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -221,7 +221,7 @@
                d="m 567.51,1287.62 v 227.62 c 0.0659,22.064 17.93596,39.9341 40,40 h 195.53167 c 22.06404,0.066 39.9341,17.936 40,40 v 1921.7799"
                stroke-miterlimit="10"
                id="path186"
-               class="albania not-affected"
+               class="albania not-affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:16.27499962;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -229,7 +229,7 @@
                d="m 498.43,1287.62 v 277.06 c 0.0659,22.064 17.93596,39.9341 40,40 h 254.92004 c 22.06404,0.066 39.9341,17.936 40,40 v 1865.426"
                stroke-miterlimit="10"
                id="path188"
-               class="montenegro not-affected hover-tooltip"
+               class="montenegro not-affected hover-tooltip second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:3.9375;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -237,7 +237,7 @@
                d="m 406.32,1287.62 v 329.67 c 0.0659,22.064 17.93596,39.9341 40,40 h 341.2487 c 22.06404,0.066 39.9341,17.936 40,40 v 1812.1933"
                stroke-miterlimit="10"
                id="path190"
-               class="bosnia not-affected"
+               class="bosnia not-affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:9.30000019;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -248,13 +248,13 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line196"
-               class="ukraine not-affected hover-tooltip"
+               class="ukraine not-affected hover-tooltip first"
                style="fill:none;stroke:#00adef;stroke-width:270.1499939;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 579,670.7 h 139 a 40.12,40.12 0 0 1 40,40 v 576.92"
                stroke-miterlimit="10"
                id="path198"
-               class="serbia not-affected hover-tooltip"
+               class="serbia not-affected hover-tooltip first"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:38.54999924;stroke-miterlimit:10;stroke-opacity:1" />
             <line
@@ -264,13 +264,13 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line200"
-               class="moldova not-affected hover-tooltip"
+               class="moldova not-affected hover-tooltip first"
                style="fill:none;stroke:#00adef;stroke-width:21.48749924;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="M 596.93,774.32 H 657 a 40.12,40.12 0 0 1 40,40 v 473.3"
                stroke-miterlimit="10"
                id="path202"
-               class="kosovo not-affected"
+               class="kosovo not-affected first"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:3.0374999;stroke-miterlimit:10;stroke-opacity:1" />
             <line
@@ -280,7 +280,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line204"
-               class="macedonia not-affected hover-tooltip"
+               class="macedonia not-affected hover-tooltip first"
                style="fill:none;stroke:#00adef;stroke-width:12.22500038;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="567.51001"
@@ -289,7 +289,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line206"
-               class="albania not-affected"
+               class="albania not-affected first"
                style="fill:none;stroke:#00adef;stroke-width:16.27499962;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="498.42999"
@@ -298,7 +298,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line208"
-               class="montenegro not-affected hover-tooltip"
+               class="montenegro not-affected hover-tooltip first"
                style="fill:none;stroke:#00adef;stroke-width:3.9375;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="406.32001"
@@ -307,7 +307,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line210"
-               class="bosnia not-affected"
+               class="bosnia not-affected first"
                style="fill:none;stroke:#00adef;stroke-width:9.30000019;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="1057.04"
@@ -316,13 +316,13 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line212"
-               class="ukraine affected"
+               class="ukraine affected first"
                style="fill:none;stroke:#faaf16;stroke-width:21.97500038;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 579,670.7 h 139 a 40.12,40.12 0 0 1 40,40 v 576.92"
                stroke-miterlimit="10"
                id="path214"
-               class="serbia affected"
+               class="serbia affected first"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:13.19999981;stroke-miterlimit:10;stroke-opacity:1" />
             <line
@@ -332,13 +332,13 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line216"
-               class="moldova affected"
+               class="moldova affected first"
                style="fill:none;stroke:#faaf16;stroke-width:1.72500002;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="M 596.93,774.32 H 657 a 40.12,40.12 0 0 1 40,40 v 473.3"
                stroke-miterlimit="10"
                id="path218"
-               class="kosovo affected hover-tooltip"
+               class="kosovo affected hover-tooltip first"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:8.32499981;stroke-miterlimit:10;stroke-opacity:1" />
             <line
@@ -348,7 +348,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line220"
-               class="macedonia affected"
+               class="macedonia affected first"
                style="fill:none;stroke:#faaf16;stroke-width:2.8125;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="567.51001"
@@ -357,7 +357,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line222"
-               class="albania affected"
+               class="albania affected first"
                style="fill:none;stroke:#faaf16;stroke-width:3.9375;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="498.42999"
@@ -366,7 +366,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line224"
-               class="montenegro affected"
+               class="montenegro affected first"
                style="fill:none;stroke:#faaf16;stroke-width:0.44999999;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="406.32001"
@@ -375,13 +375,13 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line226"
-               class="bosnia affected hover-tooltip"
+               class="bosnia affected hover-tooltip first"
                style="fill:none;stroke:#faaf16;stroke-width:16.72500038;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 1057,1287.62 v 259.94 c -0.066,22.064 -17.936,39.9341 -40,40 H 494.30795 c -22.06404,0.066 -39.9341,17.936 -40,40 v 1556.4585"
                stroke-miterlimit="10"
                id="path228"
-               class="ukraine affected"
+               class="ukraine affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:21.97500038;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -389,7 +389,7 @@
                d="m 758,1287.62 v 177.51 c -0.0659,22.064 -17.93596,39.9341 -40,40 H 475.45336 c -22.06404,0.066 -39.9341,17.936 -40,40 v 1723.558"
                stroke-miterlimit="10"
                id="path230"
-               class="serbia affected"
+               class="serbia affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:13.19999981;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -397,7 +397,7 @@
                d="m 864.29,1287.62 v 218.29 c -0.0659,22.064 -17.93596,39.9341 -40,40 H 482.61448 c -22.06404,0.066 -39.9341,17.936 -40,40 v 1682.4721"
                stroke-miterlimit="10"
                id="path232"
-               class="moldova affected"
+               class="moldova affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:1.72500002;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -405,7 +405,7 @@
                d="m 697,1287.62 v 129.79 c -0.0659,22.064 -17.93596,39.9341 -40,40 H 465.02114 c -22.06404,0.066 -39.9341,-11.3064 -40,10.7576 v 1799.9389"
                stroke-miterlimit="10"
                id="path234"
-               class="kosovo affected hover-tooltip"
+               class="kosovo affected hover-tooltip second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:8.32499981;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -413,7 +413,7 @@
                d="m 643,1287.62 v 76 c -0.0659,22.064 -43.71146,39.9341 -65.7755,40 H 459.56182 c -22.06404,0.066 -39.9341,17.936 -40,40 v 1822.8229"
                stroke-miterlimit="10"
                id="path236"
-               class="macedonia affected"
+               class="macedonia affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:2.8125;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -421,7 +421,7 @@
                d="m 567.51,1287.62 v 40.9 c -0.0659,22.064 -17.93596,39.9341 -40,40 h -71.14701 c -22.06404,0.066 -39.9341,17.936 -40,40 v 1874.6118"
                stroke-miterlimit="10"
                id="path238"
-               class="albania affected"
+               class="albania affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:3.9375;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -429,31 +429,31 @@
                d="m 498.43,1287.62 -4.1,18.48 c -2.25,10.16 -30.49118,18.47 -47.96118,18.47 -17.47,0 -31.76,18 -31.76,40 v 1930.6472"
                stroke-miterlimit="10"
                id="path240"
-               class="montenegro affected"
+               class="montenegro affected second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:0.44999999;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="ccssc" />
             <line
                x1="406.32001"
-               y1="3200"
+               y1="1287.62"
                x2="406.32001"
-               y2="1287.62"
+               y2="3200"
                stroke-miterlimit="10"
                id="line242"
-               class="bosnia affected hover-tooltip"
+               class="bosnia affected hover-tooltip second"
                style="fill:none;stroke:#faaf16;stroke-width:16.72500038;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 416.64732,3181.63 v 79.48 a 40.12,40.12 0 0 1 -40,40 h -13.12 a 40.12,40.12 0 0 0 -40,40 v 138.19"
                stroke-miterlimit="10"
                id="path320"
-               class="left-2"
+               class="left-2 third"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:37.40000153px;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 438.35951,3181.63 v 79.48 c 0.0659,22.064 17.93596,39.9341 40,40 h 27.77 c 22.06404,0.066 39.9341,17.936 40,40 v 528.18 c -0.0659,22.064 -17.93596,39.9341 -40,40 h -18.66 c -22.06404,0.066 -39.9341,17.936 -40,40 v 1346.1914"
                stroke-miterlimit="10"
                id="path322"
-               class="left"
+               class="left third"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:53.93700027px;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccccccc" />
@@ -461,27 +461,28 @@
                d="m 1084.121,3181.63 v 355.23 a 40.12,40.12 0 0 0 40,40 h 557.84"
                stroke-miterlimit="10"
                id="path324"
-               class="right-2"
+               class="right-2 third"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:216.69525146px;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 323.49914,3465.3 v 71.56 a 40.12,40.12 0 0 1 -40,40 h -403.33"
                stroke-miterlimit="10"
                id="path326"
-               class="left-2"
+               class="left-2 third"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#faaf16;stroke-width:37.40000153px;stroke-miterlimit:10;stroke-opacity:1" />
             <path
                d="m 915.03734,3180.351 v 723.939 c 0,2.7614 2.23858,5 5,5 h 249.57996 c 2.7614,0 5,2.2386 5,5 v 1381.1914"
                stroke-miterlimit="10"
                id="path336"
-               class="right"
+               class="right third"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:184.59225464px;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cssssc" />
           </g>
         </g>
       </svg>
+
       <div class="overlay-container">
         <ul>
           <li>
