albania hover bug fixed

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                d="m 567.51,1287.62 v 227.62 c 0.0659,22.064 17.93596,39.9341 40,40 h 195.53167 c 22.06404,0.066 39.9341,17.936 40,40 v 1921.7799"
                stroke-miterlimit="10"
                id="path186"
-               class="albania not-affected second"
+               class="albania not-affected hover-tooltip second"
                inkscape:connector-curvature="0"
                style="fill:none;stroke:#00adef;stroke-width:16.27499962;stroke-miterlimit:10;stroke-opacity:1"
                sodipodi:nodetypes="cccccc" />
@@ -289,7 +289,7 @@
                y2="1287.62"
                stroke-miterlimit="10"
                id="line206"
-               class="albania not-affected first"
+               class="albania not-affected hover-tooltip first"
                style="fill:none;stroke:#00adef;stroke-width:16.27499962;stroke-miterlimit:10;stroke-opacity:1" />
             <line
                x1="498.42999"
