menu buttons added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
       </div>
     </div>
     <div class="page" id="page-2">
+      <ul class="menu">
+        <li>
+          <button>Main report</button>
+        </li>
+        <li>
+          <button>At a glance report</button>
+        </li>
+        <li>
+          <button>Technical report</button>
+        </li>
+        <li>
+          <button>Local reports</button>
+        </li>
+        <li>
+          <button>Thematic reports</button>
+        </li>
+        <li>
+          <button>OSCE Commitments on VAW</button>
+        </li>
+      </ul>
       <div class="container map-text">
         <p>The <strong>OSCE-led Survey</strong> on the Well-being and Safety of Women was conducted in 2018 in Albania, Bosnia nad Herzegovina, Montenegro, North Macedonia and Serbia, Moldova and Ukraine. The research was also conducted in Kosovo<sup><a href="#kosovo"">[1]</a></sup>.</p>
       </div>
