content updated, menu buttons changed to links, country tooltip populations changed from space separator to dot

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="hero-foreground">
           <h2>OSCE-led Survey on the Well-being and Safety of Women</h2>
           <p>Do you know how many women and girls have experienced violence?</p>
-          <p>We need reliable data to understand the impact of violence against women and girls on our communities and societes. Identifying the scale of a problem is the first step to tackling it at its root.</p>
+          <p>We need reliable data to understand the impact of violence against women and girls on our communities and societies. Identifying the scale of a problem is the first step to tackling it at its root.</p>
           <p>This research was undertaken to provide comparable data on violence women experience in their childhood and throughout the course of their lives.</p>
           <p>
-            <strong>The survey examined</strong>
+            <strong>The survey examined:</strong>
           </p>
           <ul>
             <li>Violence against women and girls in conflict and non-conflict settings</li>
@@ -60,16 +60,13 @@
     <div class="page" id="page-2">
       <ul class="menu">
         <li>
-          <button>At a glance report</button>
+          <a href="https://violence-against-women.web.osce.org/results/DVT/" target="_blank">At a glance report</a>
         </li>
         <li>
-          <button>Technical report</button>
+          <a href="https://violence-against-women.web.osce.org/results/DVT/" target="_blank">Technical report</a>
         </li>
         <li>
-          <button>Local reports</button>
-        </li>
-        <li>
-          <button>Thematic reports</button>
+          <a href="https://www.osce.org/VAWsurvey/publications" target="_blank">Local and Thematic reports</a>
         </li>
       </ul>
       <div class="container map-text">
@@ -321,7 +318,7 @@
                 </button>
               </li>
               <li>
-                <a href="#">
+                <a href="https://violence-against-women.web.osce.org/results/DVT/" target="_blank">
                   <img class="icon" src="icons/explorer_icon_01.gif" alt="">
                   <p>Interactive Data Explorer</p>
                 </a>
