--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <div class="page" id="page-2">
       <ul class="menu">
         <li>
-          <a href="https://violence-against-women.web.osce.org/results/DVT/" target="_blank">At a glance report</a>
+          <a href="https://www.osce.org/secretariat/418913" target="_blank">At a glance report</a>
         </li>
         <li>
-          <a href="https://violence-against-women.web.osce.org/results/DVT/" target="_blank">Technical report</a>
+          <a href="https://www.osce.org/secretariat/418919" target="_blank">Technical report</a>
         </li>
         <li>
           <a href="https://www.osce.org/VAWsurvey/publications" target="_blank">Local and Thematic reports</a>
